--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <script type ="module" src="./abc.js"  > </script>
+    <script src="./abc.js"></script>
+ <div id="main">
+    <div id="nav">
+        <button class="but">Home </button>
+        <button class="but">Product</button>
+        <button class="but" onclick="click()">Account</button>
+        <button class="but">About</button>
+         </div>
+         
+ </div>
+
+    
 </body>
 </html>
